--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,7 @@ h6,
 p,
 ul {
   margin: 0px 0px 0px 0px;
+  padding: 0px 0px 0px 0px;
 }
 
 body {
@@ -24,12 +25,17 @@ body {
 }
 
 .logo {
+  display: flex;
+  align-items: center;
+  margin-right: 93px;
+
   font-family: 'Raleway', sans-serif;
   font-weight: 700;
   font-size: 26px;
   line-height: 1.19;
   text-decoration: none;
   color: var(--main-text-color);
+  background: tomato;
 }
 .particle-web {
   color: var(--secondary-color);
@@ -45,18 +51,24 @@ body {
   letter-spacing: 0.02em;
   text-decoration: none;
   color: var(--main-text-color);
+  background: tomato;
 }
 .nav-list:hover,
 .nav-list:focus {
   color: var(--secondary-color);
 }
 .contact-list {
+  padding-top: 32px;
+  padding-bottom: 32px;
+  display: block;
+
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
   text-decoration: none;
   color: var(--gray);
+  background-color: tomato;
 }
 .contact-list:hover,
 .contact-list:focus {
@@ -89,18 +101,26 @@ body {
   font-style: normal;
 }
 .benefits-header {
+  margin-bottom: 10px;
+
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
   text-transform: uppercase;
   color: var(--main-text-color);
+  background-color: teal;
 }
 .benefits-text {
+  background-color: green;
   font-size: 14px;
   line-height: 1.7;
   color: var(--gray);
 }
 .hiden-header {
+}
+.benefits {
+  margin-top: 94px;
+  margin-bottom: 94px;
 }
 .secondary-header {
   font-weight: 700;
@@ -181,15 +201,35 @@ body {
   display: flex;
   list-style-type: none;
   font-style: normal;
+  margin-left: auto;
 }
 .all-lists-contact .item + .item {
   margin-left: 50px;
+  display: flex;
 }
 .page-nav {
   display: flex;
 }
+.page-header {
+  display: flex;
+  align-items: center;
+}
 .container {
-  width: 1170px;
+  width: 1200px;
   margin-right: auto;
   margin-left: auto;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+.benefits-list {
+  display: flex;
+  flex-wrap: wrap;
+}
+.benefits-list .item {
+  width: 270px;
+  margin-right: 30px;
+  background-color: tomato;
+}
+.benefits-list .item:nth-child(4n) {
+  margin-right: 0px;
 }
