--- a/css/styles.css
+++ b/css/styles.css
@@ -233,3 +233,18 @@ body {
 .benefits-list .item:nth-child(4n) {
   margin-right: 0px;
 }
+.features {
+  display: flex;
+  flex-wrap: wrap;
+  background-color: tomato;
+}
+
+.features .item {
+  width: 270px;
+  margin-left: 30px;
+}
+
+.features .item:nth-child(3n) {
+  margin-right: 0px;
+}
+
