--- a/css/styles.css
+++ b/css/styles.css
@@ -27,7 +27,7 @@ body {
   color: var(--main-text-color);
   letter-spacing: 0.03em;
 }
-
+/* -----------------Header----------------- */
 .logo {
   display: flex;
   align-items: center;
@@ -39,7 +39,6 @@ body {
   line-height: 1.19;
   text-decoration: none;
   color: var(--main-text-color);
-  background: tomato;
 }
 .particle-web {
   color: var(--secondary-color);
@@ -55,7 +54,7 @@ body {
   letter-spacing: 0.02em;
   text-decoration: none;
   color: var(--main-text-color);
-  background: tomato;
+  /* background: tomato; */
 }
 .nav-list:hover,
 .nav-list:focus {
@@ -72,12 +71,15 @@ body {
   letter-spacing: 0.02em;
   text-decoration: none;
   color: var(--gray);
-  background-color: tomato;
 }
 .contact-list:hover,
 .contact-list:focus {
   color: var(--secondary-color);
 }
+.accent{
+  color: var(--secondary-color);
+}
+/* ----------------------------Main---------------------------- */
 .hero-section{
   background-color: var(--hero-bg-color);
   text-align: center;
@@ -131,19 +133,20 @@ body {
   line-height: 1.14;
   text-transform: uppercase;
   color: var(--main-text-color);
-  background-color: teal;
+  /* background-color: teal; */
 }
 .benefits-text {
-  background-color: green;
+  /* background-color: green; */
   font-size: 14px;
   line-height: 1.7;
   color: var(--gray);
 }
 .hiden-header {
+  display: none;
 }
 .benefits {
-  margin-top: 94px;
-  margin-bottom: 94px;
+  padding-top: 94px;
+  /* padding-bottom: 94px; */
 }
 .secondary-header {
   font-weight: 700;
@@ -151,20 +154,24 @@ body {
   line-height: 1.16;
   text-align: center;
   color: var(--main-text-color);
-  /* background-color: tomato; */
 }
+/* ----------------Team---------------- */
 .team {
   background-color: var(--team-bg-color);
-  margin-top: 94px;
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+.team-header{
+  margin-bottom: 50px;
 }
 .team-member-name {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.18;
   text-align: center;
-  color: var(--main-text-color);
-
+  color: var(--main-text-color); 
   
+  margin-bottom: 10px;
 }
 .team-member-position {
   font-size: 16px;
@@ -172,15 +179,27 @@ body {
   text-align: center;
   color: var(--gray);
 }
-
-.adds {
-  font-style: normal;
-  font-size: 14px;
-  line-height: 1.7;
-  color: var(--white);
-  text-decoration: none;
-  background-color: var(--main-text-color); /*temp*/
+.team-list {
+  display: flex;
+  flex-wrap: wrap;
+  margin-right: -30px;
+  margin-bottom: -30px;
 }
+.team-card {
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+.team-item {
+  background-color: var(--white);
+  flex-basis: calc(100% / 4 - 30px);
+  margin-right: 30px;
+  margin-bottom: 30px;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+}
+
+
 .filter {
   background: var(--button-bg-color);
   font-weight: 500;
@@ -259,15 +278,19 @@ body {
 .benefits-list .item {
   width: 270px;
   margin-right: 30px;
-  background-color: tomato;
+  /* background-color: tomato; */
 }
 .benefits-list .item:nth-child(4n) {
   margin-right: 0px;
 }
+.features-section{
+padding-top: 94px;
+padding-bottom: 94px;
+}
 .features {
   display: flex;
   margin-top: 50px;
-  background-color: tomato;
+  /* background-color: tomato; */
 }
 
 .features .item {
@@ -279,3 +302,31 @@ body {
   margin-right: 0px;
 }
 
+/* ---------------Footer--------------- */
+.footer {
+  background-color: var(--hero-bg-color);
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+.logo-footer{
+  color: var(--white);
+}
+.footer-list{
+  margin-top: 20px;
+}
+.adds {
+  font-style: normal;
+  font-size: 14px;
+  line-height: 1.7;
+  color: var(--white);
+  text-decoration: none;
+}
+.adds:focus , .adds:hover{
+  color:  var(--secondary-color);
+}
+.footer-contact{
+padding: 0;
+}
+.footer-list .item:not(:first-child){
+  margin-top: 9px;
+}
