--- a/css/styles.css
+++ b/css/styles.css
@@ -331,6 +331,7 @@ padding: 0;
 .work-about {
   border: 1px solid #eeeeee;
   border-top: none;
+
   padding: 20px 24px;
   margin-top: -5px;
 }
@@ -372,4 +373,8 @@ padding: 0;
   list-style-type: none;
   font-style: normal;
   /* background-color: tomato; */
+}
+.portfolio-section {
+  padding-top: 94px;
+  padding-bottom: 94px;
 }
